Z-index fix

--- a/less/_helpers.less
+++ b/less/_helpers.less
@@ -184,6 +184,10 @@
   vertical-align: middle;
   margin-top: @padding-small-vertical;
 
+  // Z-index relative to .esper-expanded
+  position: relative;
+  z-index: 2;
+
   .min-icon {
     cursor: pointer;
   }
